--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -30,6 +31,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+::slotted(h1) {
+  font-size: 3.2em;
+  line-height: 1.1;
+}     
 
 @media (prefers-color-scheme: light) {
   :root {
