--- a/src/index.scss
+++ b/src/index.scss
@@ -18,9 +18,10 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
 ::slotted(h1) {
